wrap panel LinuxMasterRace!!!

--- a/SZTGUI3/MainWindow.xaml
+++ b/SZTGUI3/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SZTGUI3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
+    <WrapPanel x:Name="linuxMasterRace">
+        
+    </WrapPanel>
 </Window>
